--- a/datamodels/2.x/itop-core-update/view/SelectUpdateFile.html.twig
+++ b/datamodels/2.x/itop-core-update/view/SelectUpdateFile.html.twig
@@ -4,108 +4,106 @@
 
 {% UIContentBlock Standard {'sContainerClass':'ibo-update-core'} %}
 
-{% UITitle ForPage {'sTitle':'iTopUpdate:UI:PageTitle'|dict_s} %}
+    {% UITitle ForPage {'sTitle':'iTopUpdate:UI:PageTitle'|dict_s} %}
 
-{% UIHtml %}
-    <div class="ibo-v-spacer">&nbsp;</div>
-{% EndUIHtml %}
+    {% UIHtml %}
+        <div class="ibo-v-spacer">&nbsp;</div>
+    {% EndUIHtml %}
 
-{% UIContentBlock Standard {'sContainerClass':'display_block display-files'} %}
-{% UIFieldSet Standard {'sLegend':'iTopUpdate:UI:Status'|dict_s} %}
+    {% UIContentBlock Standard {'sContainerClass':'display_block display-files'} %}
+        {% UIFieldSet Standard {'sLegend':'iTopUpdate:UI:Status'|dict_s} %}
+            {% UIAlert ForInformation {'sId':'header-requirements', 'IsCollapsible':false, 'IsClosable':false} %}
+                {% UIContentBlock Standard {'sContainerClass':'ibo-update-core-header-requirements', 'sId':'can-core-update'} %}
+                    {% UIHtml %}
+                        {{ 'iTopUpdate:UI:CanCoreUpdate:Loading'|dict_s }}
+                    {% EndUIHtml %}
+                    {% UISpinner Standard {} %}
+                {% EndUIContentBlock %}
+            {% EndUIAlert %}
 
-{% UIAlert ForInformation {'sId':'header-requirements', 'IsCollapsible':false, 'IsClosable':false} %}
-{% UIContentBlock Standard {'sContainerClass':'ibo-update-core-header-requirements', 'sId':'can-core-update'} %}
-{% UIHtml %}
-    {{ 'iTopUpdate:UI:CanCoreUpdate:Loading'|dict_s }}
-{% EndUIHtml %}
-{% UISpinner Standard {} %}
-{% EndUIContentBlock %}
-{% EndUIAlert %}
+            {% UIField Standard {'sLabel':'iTopUpdate:UI:CurrentVersion'|dict_s} %}
+                {% UIHtml %}
+                    {{ 'UI:iTopVersion:Long'|dict_format(constant('ITOP_APPLICATION'), constant('ITOP_VERSION'), constant('ITOP_REVISION'), constant('ITOP_BUILD_DATE')) }}
+                {% EndUIHtml %}
+            {% EndUIField %}
 
-{% UIField Standard {'sLabel':'iTopUpdate:UI:CurrentVersion'|dict_s} %}
-{% UIHtml %}
-    {{ 'UI:iTopVersion:Long'|dict_format(constant('ITOP_APPLICATION'), constant('ITOP_VERSION'), constant('ITOP_REVISION'), constant('ITOP_BUILD_DATE')) }}
-{% EndUIHtml %}
-{% EndUIField %}
+            {% UIField Standard {'sLabel':'iTopUpdate:UI:DiskFreeSpace'|dict_s} %}
+                {% UIHtml %}
+                    {{ sDiskFreeSpace }}
+                {% EndUIHtml %}
+            {% EndUIField %}
 
-{% UIField Standard {'sLabel':'iTopUpdate:UI:DiskFreeSpace'|dict_s} %}
-{% UIHtml %}
-    {{ sDiskFreeSpace }}
-{% EndUIHtml %}
-{% EndUIField %}
+            {% UIField Standard {'sLabel':'iTopUpdate:UI:ItopDiskSpace'|dict_s, 'ValueId':'itop-disk-space'} %}
+                {% UISpinner Standard {} %}
+            {% EndUIField %}
 
-{% UIField Standard {'sLabel':'iTopUpdate:UI:ItopDiskSpace'|dict_s, 'ValueId':'itop-disk-space'} %}
-{% UISpinner Standard {} %}
-{% EndUIField %}
+            {% UIField Standard {'sLabel':'iTopUpdate:UI:DBDiskSpace'|dict_s, 'ValueId':'db-disk-space'} %}
+                {% UISpinner Standard {} %}
+            {% EndUIField %}
 
-{% UIField Standard {'sLabel':'iTopUpdate:UI:DBDiskSpace'|dict_s, 'ValueId':'db-disk-space'} %}
-{% UISpinner Standard {} %}
-{% EndUIField %}
+            {% UIField Standard {'sLabel':'iTopUpdate:UI:FileUploadMaxSize'|dict_s} %}
+                {% UIHtml %}
+                    {{ sFileUploadMaxSize }}
+                {% EndUIHtml %}
+            {% EndUIField %}
 
-{% UIField Standard {'sLabel':'iTopUpdate:UI:FileUploadMaxSize'|dict_s} %}
-{% UIHtml %}
-    {{ sFileUploadMaxSize }}
-{% EndUIHtml %}
-{% EndUIField %}
+        {% EndUIFieldSet %}
 
-{% EndUIFieldSet %}
+        {% UIFieldSet Standard {'sLegend':'iTopUpdate:UI:SelectUpdateFile'|dict_s} %}
+            {% UIForm Standard {} %}
+                {% UIInput ForHidden {'sName':'operation', 'sValue':'ConfirmUpdate'} %}
+                {% UIInput ForHidden {'sName':'transaction_id', 'sValue':sTransactionId} %}
 
-{% UIFieldSet Standard {'sLegend':'iTopUpdate:UI:SelectUpdateFile'|dict_s} %}
-{% UIForm Standard {} %}
-{% UIInput ForHidden {'sName':'operation', 'sValue':'ConfirmUpdate'} %}
-{% UIInput ForHidden {'sName':'transaction_id', 'sValue':sTransactionId} %}
+                {% UIAlert ForFailure {'sId':'header-file-size', 'IsHidden':true} %}
+                    {% UIContentBlock Standard {'sContainerClass':'ibo-file-size-error'} %}
+                        {% UIHtml %}
+                            {{ 'iTopUpdate:Error:FileUploadMaxSizeTooStandard'|dict_s }}
+                        {% EndUIHtml %}
+                    {% EndUIContentBlock %}
+                    {% UIContentBlock Standard {'sContainerClass':'ibo-file-size-error'} %}
+                        {% UIHtml %}
+                            {{ 'iTopUpdate:UI:PostMaxSize'|dict_format(sPostMaxSize) }}
+                        {% EndUIHtml %}
+                    {% EndUIContentBlock %}
+                    {% UIContentBlock Standard {'sContainerClass':'ibo-file-size-error'} %}
+                        {% UIHtml %}
+                            {{ 'iTopUpdate:UI:UploadMaxFileSize'|dict_format(sUploadMaxSize) }}
+                        {% EndUIHtml %}
+                    {% EndUIContentBlock %}
+                {% EndUIAlert %}
 
-{% UIAlert ForFailure {'sId':'header-file-size', 'IsHidden':true} %}
-{% UIContentBlock Standard {'sContainerClass':'ibo-file-size-error'} %}
-{% UIHtml %}
-    {{ 'iTopUpdate:Error:FileUploadMaxSizeTooStandard'|dict_s }}
-{% EndUIHtml %}
-{% EndUIContentBlock %}
-{% UIContentBlock Standard {'sContainerClass':'ibo-file-size-error'} %}
-{% UIHtml %}
-    {{ 'iTopUpdate:UI:PostMaxSize'|dict_format(sPostMaxSize) }}
-{% EndUIHtml %}
-{% EndUIContentBlock %}
-{% UIContentBlock Standard {'sContainerClass':'ibo-file-size-error'} %}
-{% UIHtml %}
-    {{ 'iTopUpdate:UI:UploadMaxFileSize'|dict_format(sUploadMaxSize) }}
-{% EndUIHtml %}
-{% EndUIContentBlock %}
-{% EndUIAlert %}
+                {% UIContentBlock Standard {'sContainerClass':'upload_container'} %}
+                    {% UIInput Standard {'sType':'file', 'sId':'file', 'sName':'file', 'sValue':''} %}
+                {% EndUIContentBlock %}
 
-{% UIContentBlock Standard {'sContainerClass':'upload_container'} %}
-{% UIInput Standard {'sType':'file', 'sId':'file', 'sName':'file', 'sValue':''} %}
-{% EndUIContentBlock %}
+                {% UIAlert ForWarning {'sId':'dobackup-warning', 'IsHidden':true} %}
+                    {% UIHtml %}
+                        {{ 'iTopUpdate:UI:DoBackup:Warning'|dict_s }}
+                    {% EndUIHtml %}
+                {% EndUIAlert %}
 
-{% UIAlert ForWarning {'sId':'dobackup-warning', 'IsHidden':true} %}
-{% UIHtml %}
-    {{ 'iTopUpdate:UI:DoBackup:Warning'|dict_s }}
-{% EndUIHtml %}
-{% EndUIAlert %}
+                {% UIField Standard {'sLabel':'iTopUpdate:UI:DoBackup:Label'|dict_s, 'sLayout':'large'} %}
+                    {% UIInput Standard {'sType':'checkbox', 'sId':'doBackup', 'sName':'doBackup', 'sValue':'1', 'IsChecked':true} %}
+                {% EndUIField %}
 
-{% UIField Standard {'sLabel':'iTopUpdate:UI:DoBackup:Label'|dict_s, 'sLayout':'large'} %}
-{% UIInput Standard {'sType':'checkbox', 'sId':'doBackup', 'sName':'doBackup', 'sValue':'1', 'IsChecked':true} %}
-{% EndUIField %}
+                {% UIField Standard {'sLabel':'iTopUpdate:UI:DoFilesArchive'|dict_s, 'sLayout':'large'} %}
+                    {% UIInput Standard {'sType':'checkbox', 'sId':'doFilesArchive', 'sName':'doFilesArchive', 'sValue':'1', 'IsChecked':true} %}
+                {% EndUIField %}
 
-{% UIField Standard {'sLabel':'iTopUpdate:UI:DoFilesArchive'|dict_s, 'sLayout':'large'} %}
-{% UIInput Standard {'sType':'checkbox', 'sId':'doFilesArchive', 'sName':'doFilesArchive', 'sValue':'1', 'IsChecked':true} %}
-{% EndUIField %}
+                {% UIContentBlock Standard {'sContainerClass':'ibo_check_update_submit'} %}
+                    {% UIButton ForPrimaryAction {'sLabel':'iTopUpdate:UI:CheckUpdate'|dict_s, 'sId':'check-update', 'bIsSubmit':true, 'IsDisabled':true} %}
+                    {% UISpinner Standard {'sId':'submit-wait', 'IsHidden':true} %}
+                {% EndUIContentBlock %}
 
-{% UIContentBlock Standard {'sContainerClass':'ibo_check_update_submit'} %}
-{% UIButton ForPrimaryAction {'sLabel':'iTopUpdate:UI:CheckUpdate'|dict_s, 'sId':'check-update', 'bIsSubmit':true, 'IsDisabled':true} %}
-{% UISpinner Standard {'sId':'submit-wait', 'IsHidden':true} %}
-{% EndUIContentBlock %}
+            {% EndUIForm %}
 
-{% EndUIForm %}
+        {% EndUIFieldSet %}
 
-{% EndUIFieldSet %}
+        {% UIFieldSet Standard {'sLegend':'iTopUpdate:UI:History'|dict_s} %}
+            {% UIDataTable ForResult {'oPage':oPage, 'sListId':'iboupdatehistory', 'oSet':oSet} %}{% EndUIDataTable %}
+        {% EndUIFieldSet %}
 
-{% UIFieldSet Standard {'sLegend':'iTopUpdate:UI:History'|dict_s} %}
-{% UIDataTable ForResult {'oPage':oPage, 'sListId':'iboupdatehistory', 'oSet':oSet} %}
-{% EndUIDataTable %}
-
-{% EndUIFieldSet %}
-{% EndUIContentBlock %}
+    {% EndUIContentBlock %}
 
 {% EndUIContentBlock %}
 {% endapply %}
