Navigation menu: Fix placeholder hint placement

--- a/css/backoffice/layout/_navigation-menu.scss
+++ b/css/backoffice/layout/_navigation-menu.scss
@@ -129,6 +129,7 @@ $ibo-navigation-menu--menu--placeholder--margin-top: $ibo-navigation-menu--menu-
 $ibo-navigation-menu--menu--placeholder-image--svg--width: 90% !default;
 $ibo-navigation-menu--menu--placeholder-image--svg--height: auto !default;
 $ibo-navigation-menu--menu--placeholder-image--svg--margin: auto !default;
+$ibo-navigation-menu--menu--placeholder-hint--margin-top: 8px !default;
 
 $ibo-navigation-menu--menu-nodes--margin-bottom--on-filtered: 48px !default;
 
