--- a/datamodels/2.x/itop-core-update/view/SelectUpdateFile.html.twig
+++ b/datamodels/2.x/itop-core-update/view/SelectUpdateFile.html.twig
@@ -2,50 +2,48 @@
 {# @license     http://opensource.org/licenses/AGPL-3.0 #}
 {% apply spaceless %}
 
-{% UIContentBlock {'container_class':'ibo-update-core'} %}
+{% UIContentBlock Standard {'sContainerClass':'ibo-update-core'} %}
 
-{% UITitle ForPage {'title':'iTopUpdate:UI:PageTitle'|dict_s} %}
+{% UITitle ForPage {'sTitle':'iTopUpdate:UI:PageTitle'|dict_s} %}
 
 {% UIHtml %}
     <div class="ibo-v-spacer">&nbsp;</div>
 {% EndUIHtml %}
 
-{% UIContentBlock {'container_class':'display_block display-files'} %}
-{% UIFieldSet {'legend':'iTopUpdate:UI:Status'|dict_s} %}
+{% UIContentBlock Standard {'sContainerClass':'display_block display-files'} %}
+{% UIFieldSet Standard {'sLegend':'iTopUpdate:UI:Status'|dict_s} %}
 
-{% UIAlert ForInformation {'title':'', 'id':'header-requirements', 'is_collapsible':false, 'is_closable':false} %}
+{% UIAlert ForInformation {'sId':'header-requirements', 'IsCollapsible':false, 'IsClosable':false} %}
 {% UIHtml %}
     <span id="can-core-update">{{ 'iTopUpdate:UI:CanCoreUpdate:Loading'|dict_s }}  <i class="ajax-spin fas fa-spinner fa-spin" aria-hidden="true"></i></span>
 {% EndUIHtml %}
 {% EndUIAlert %}
 
-    {% set sVersion = 'UI:iTopVersion:Long'|dict_format(constant('ITOP_APPLICATION'), constant('ITOP_VERSION'), constant('ITOP_REVISION'), constant('ITOP_BUILD_DATE')) %}
-
-{% UIField Small {'label':'iTopUpdate:UI:CurrentVersion'|dict_s} %}
+{% UIField Standard {'sLabel':'iTopUpdate:UI:CurrentVersion'|dict_s} %}
 {% UIHtml %}
-    {{ sVersion }}
+    {{ 'UI:iTopVersion:Long'|dict_format(constant('ITOP_APPLICATION'), constant('ITOP_VERSION'), constant('ITOP_REVISION'), constant('ITOP_BUILD_DATE')) }}
 {% EndUIHtml %}
 {% EndUIField %}
 
-{% UIField Small {'label':'iTopUpdate:UI:DiskFreeSpace'|dict_s} %}
+{% UIField Standard {'sLabel':'iTopUpdate:UI:DiskFreeSpace'|dict_s} %}
 {% UIHtml %}
     {{ sDiskFreeSpace }}
 {% EndUIHtml %}
 {% EndUIField %}
 
-{% UIField Small {'label':'iTopUpdate:UI:ItopDiskSpace'|dict_s, 'value_id':'itop-disk-space'} %}
+{% UIField Standard {'sLabel':'iTopUpdate:UI:ItopDiskSpace'|dict_s, 'ValueId':'itop-disk-space'} %}
 {% UIHtml %}
     <i class="ajax-spin fas fa-spinner fa-spin" aria-hidden="true"></i>
 {% EndUIHtml %}
 {% EndUIField %}
 
-{% UIField Small {'label':'iTopUpdate:UI:DBDiskSpace'|dict_s, 'value_id':'db-disk-space'} %}
+{% UIField Standard {'sLabel':'iTopUpdate:UI:DBDiskSpace'|dict_s, 'ValueId':'db-disk-space'} %}
 {% UIHtml %}
     <i class="ajax-spin fas fa-spinner fa-spin" aria-hidden="true"></i>
 {% EndUIHtml %}
 {% EndUIField %}
 
-{% UIField Small {'label':'iTopUpdate:UI:FileUploadMaxSize'|dict_s} %}
+{% UIField Standard {'sLabel':'iTopUpdate:UI:FileUploadMaxSize'|dict_s} %}
 {% UIHtml %}
     {{ sFileUploadMaxSize }}
 {% EndUIHtml %}
@@ -53,15 +51,15 @@
 
 {% EndUIFieldSet %}
 
-{% UIFieldSet {'legend':'iTopUpdate:UI:SelectUpdateFile'|dict_s} %}
-{% UIForm {} %}
-{% UIInput ForHidden {'name':'operation', 'value':'ConfirmUpdate'} %}
-{% UIInput ForHidden {'name':'transaction_id', 'value':sTransactionId} %}
+{% UIFieldSet Standard {'sLegend':'iTopUpdate:UI:SelectUpdateFile'|dict_s} %}
+{% UIForm Standard {} %}
+{% UIInput ForHidden {'sName':'operation', 'sValue':'ConfirmUpdate'} %}
+{% UIInput ForHidden {'sName':'transaction_id', 'sValue':sTransactionId} %}
 
 {% UIHtml %}
     <div id="header-file-size" class="header_message message_error" style="display: none">
         <div>
-            <span>{{ 'iTopUpdate:Error:FileUploadMaxSizeTooSmall'|dict_s }}</span>
+            <span>{{ 'iTopUpdate:Error:FileUploadMaxSizeTooStandard'|dict_s }}</span>
         </div>
         <div>
             <span>{{ 'iTopUpdate:UI:PostMaxSize'|dict_format(sPostMaxSize) }}</span>
@@ -72,32 +70,37 @@
     </div>
 {% EndUIHtml %}
 
-{% UIContentBlock {'container_class':'upload_container'} %}
-{% UIInput Standard {'type':'file', 'id':'file', 'name':'file'} %}
+{% UIContentBlock Standard {'sContainerClass':'upload_container'} %}
+{% UIInput Standard {'sType':'file', 'sId':'file', 'sName':'file', 'sValue':''} %}
 {% EndUIContentBlock %}
 
 {% UIHtml %}
     <div id="dobackup-warning" class="header_message message_info" style="display: none">{{ 'iTopUpdate:UI:DoBackup:Warning'|dict_s }}</div>
 {% EndUIHtml %}
 
-{% UIField Large {'label':'iTopUpdate:UI:DoBackup:Label'|dict_s} %}
-{% UIInput Standard {'type':'checkbox', 'id':'doBackup', 'name':'doBackup', 'value':'1', 'checked':true} %}
+{% UIField Standard {'sLabel':'iTopUpdate:UI:DoBackup:Label'|dict_s, 'sLayout':'large'} %}
+{% UIInput Standard {'sType':'checkbox', 'sId':'doBackup', 'sName':'doBackup', 'sValue':'1', 'Checked':true} %}
 {% EndUIField %}
 
-{% UIField Large {'label':'iTopUpdate:UI:DoFilesArchive'|dict_s} %}
-{% UIInput Standard {'type':'checkbox', 'id':'doFilesArchive', 'name':'doFilesArchive', 'value':'1', 'checked':true} %}
+{% UIField Standard {'sLabel':'iTopUpdate:UI:DoFilesArchive'|dict_s, 'sLayout':'large'} %}
+{% UIInput Standard {'sType':'checkbox', 'sId':'doFilesArchive', 'sName':'doFilesArchive', 'sValue':'1', 'Checked':true} %}
 {% EndUIField %}
 
+{% UIContentBlock Standard {'sContainerClass':'ibo_check_update_submit'} %}
+{% UIButton ForPrimaryAction {'sLabel':'iTopUpdate:UI:CheckUpdate'|dict_s, 'sId':'check-update', 'bIsSubmit':true, 'IsDisabled':true} %}
 {% UIHtml %}
-    <p><input id="check-update" type="submit" value="{{ 'iTopUpdate:UI:CheckUpdate'|dict_s }}" disabled="disabled"/> <i id="submit-wait" style="display: none" class="fas fa-spinner fa-spin" aria-hidden="true"></i></p>
+    <i id="submit-wait" style="display: none" class="fas fa-spinner fa-spin" aria-hidden="true"></i>
 {% EndUIHtml %}
+{% EndUIContentBlock %}
 
 {% EndUIForm %}
 
 {% EndUIFieldSet %}
 
-{% UIFieldSet {'legend':'iTopUpdate:UI:History'|dict_s} %}
-{% UIDataTable ForResult {'list_id':'iboupdatehistory', 'object_set':oSet} %}
+{% UIFieldSet Standard {'sLegend':'iTopUpdate:UI:History'|dict_s} %}
+{% UIDataTable ForResult {'oPage':oPage, 'sListId':'iboupdatehistory', 'oSet':oSet} %}
+{% EndUIDataTable %}
+
 {% EndUIFieldSet %}
 {% EndUIContentBlock %}
 
