--- a/datamodels/2.x/itop-portal-base/portal/public/css/variables.scss
+++ b/datamodels/2.x/itop-portal-base/portal/public/css/variables.scss
@@ -943,15 +943,15 @@ $hr-border:                   $gray-lighter !default;
 //
 //##
 
-$messaging-self-primary-color: $white !default;
-$messaging-self-secondary-color: $gray-dark !default;
-$messaging-1st-peer-primary-color: $combodo-orange !default;
-$messaging-1st-peer-secondary-color: $white !default;
-$messaging-2nd-peer-primary-color: #e9a537 !default;
-$messaging-2nd-peer-secondary-color: $white !default;
-$messaging-3rd-peer-primary-color: darken($combodo-orange, 7%) !default;
-$messaging-3rd-peer-secondary-color: $white !default;
-$messaging-4th-peer-primary-color: #e3952c !default;
-$messaging-4th-peer-secondary-color: $white !default;
-$messaging-5th-peer-primary-color: darken($combodo-orange, 14%) !default;
-$messaging-5th-peer-secondary-color: $white !default;
+$messaging-self-primary-color: $combodo-dark-gray !default;
+$messaging-self-secondary-color: $white !default;
+$messaging-1st-peer-primary-color: $white !default;
+$messaging-1st-peer-secondary-color: $gray-dark !default;
+$messaging-2nd-peer-primary-color: $white !default;
+$messaging-2nd-peer-secondary-color: $gray-dark !default;
+$messaging-3rd-peer-primary-color: $white !default;
+$messaging-3rd-peer-secondary-color: $gray-dark !default;
+$messaging-4th-peer-primary-color: $white !default;
+$messaging-4th-peer-secondary-color: $gray-dark !default;
+$messaging-5th-peer-primary-color: $white !default;
+$messaging-5th-peer-secondary-color: $gray-dark !default;
