--- a/templates/base/components/input/select/select.html.twig
+++ b/templates/base/components/input/select/select.html.twig
@@ -2,7 +2,10 @@
 {# @license     http://opensource.org/licenses/AGPL-3.0 #}
 {% extends "base/components/input/layout.html.twig" %}
 {% block iboInput %}
-    <select id="{{ oUIBlock.GetId() }}" name="{{ oUIBlock.GetName() }}">
+    <select id="{{ oUIBlock.GetId() }}" name="{{ oUIBlock.GetName() }}"
+            {% if oUIBlock.GetSubmitOnChange() %}onChange="this.form.submit();"{% endif %}
+            class="{% if oUIBlock.IsHidden() %}ibo-is-hidden{% endif %}"
+    >
         {% for oSubBlock in oUIBlock.GetSubBlocks() %}
             {{ render_block(oSubBlock, {aPage: aPage}) }}
         {% endfor %}
