--- a/datamodels/2.x/itop-core-update/view/SelectUpdateFile.ready.js.twig
+++ b/datamodels/2.x/itop-core-update/view/SelectUpdateFile.ready.js.twig
@@ -58,7 +58,7 @@ $.when(oGetItopDiskSpace, oGetDBDiskSpace).then(
         var iDBDiskSpace = data2[0].iDBDiskSpace;
         if ((2 * (iItopDiskSpace + iDBDiskSpace)) > iDiskFreeSpace)
         {
-            $("#dobackup-warning").show();
+            $("#dobackup-warning").removeClass("ibo-is-hidden");
         }
     }
 );
@@ -71,17 +71,17 @@ $("#file").on("change", function(e) {
     {
         if (selectedFile.size > {{ iFileUploadMaxSize }})
         {
-            errorMsg.show();
+            errorMsg.removeClass("ibo-is-hidden");
             submitButton.prop("disabled", true);
             return;
         }
     }
-    errorMsg.hide();
+    errorMsg.addClass("ibo-is-hidden");
     submitButton.prop("disabled", false);
 });
 
 $("#check-update").on("click", function(e) {
-    $("#submit-wait").show();
+    $("#submit-wait").removeClass("ibo-is-hidden");
     $(this).prop("disabled", true);
     $(".ajax-spin").removeClass("fa-spinner").removeClass("fa-spin").addClass("fa-times");
     $(this).parents('form').submit();
