--- a/templates/base/components/field/layout.html.twig
+++ b/templates/base/components/field/layout.html.twig
@@ -1,5 +1,5 @@
 {% set aParams = oUIBlock.GetParams() %}
-<div id="{{ oUIBlock.GetId() }}" class="ibo-field ibo-field-{{ oUIBlock.GetLayout() }}"
+<div id="{{ oUIBlock.GetId() }}" class="ibo-field ibo-field-{{ oUIBlock.GetLayout() }}{% if oUIBlock.IsHidden() %} ibo-is-hidden{% endif %}"
      data-role="ibo-field"
      data-attribute-code="{{ oUIBlock.GetAttCode() }}"
      data-attribute-type="{{ oUIBlock.GetAttType() }}"
@@ -14,7 +14,6 @@
 	 data-attribute-flag-must-prompt="{{ oUIBlock.IsMustPrompt()|var_export }}"
 	 data-attribute-flag-slave="{{ oUIBlock.IsSlave()|var_export }}"
 	 data-value-raw="{{ aParams.value_raw }}"
-		{% if oUIBlock.IsHidden() %}style="display: none;"{% endif %}
 >
 	<div class="ibo-field--label">{{ oUIBlock.GetLabel()|raw }}</div>
 	<div class="ibo-field--value" {% if oUIBlock.GetValueId() %}id="{{ oUIBlock.GetValueId() }}"{% endif %}>
