--- a/templates/base/components/global-search/layout.js.twig
+++ b/templates/base/components/global-search/layout.js.twig
@@ -1,1 +1,3 @@
-$('#{{ oUIBlock.GetId() }}').global_search();
+$('#{{ oUIBlock.GetId() }}').global_search({
+	init_opened: {{ oUIBlock.HasQuery()|var_export }}
+});
