N°3567 - Migrate backoffice pages to new UIBlock system : App. upgrade (Fix default values and typos)

--- a/datamodels/2.x/itop-core-update/view/UpdateCoreFiles.html.twig
+++ b/datamodels/2.x/itop-core-update/view/UpdateCoreFiles.html.twig
@@ -33,7 +33,7 @@
 
             {% if bDoFilesArchive %}
                 {% UIContentBlock Standard {'sId':'do_files_archive_done','sContainerClass':'ibo-update-core--archive-done', 'IsHidden':true} %}
-                    {% UIField Large {'sLabel':''iTopUpdate:UI:WithFilesBackup'|dict_s', 'sValueHtml':''} %}{% EndUIField %}
+                    {% UIField Large {'sLabel':'iTopUpdate:UI:WithFilesBackup'|dict_s} %}{% EndUIField %}
                     {% UIAlert ForSuccess {'sContent':sItopArchive} %}{% EndUIAlert %}
                 {% EndUIContentBlock %}
             {% endif %}
